<resources>
    <string name="app_name">School Chale hum</string>
    <string name="user_name">User Name :</string>
    <string name="password">Password </string>
    <string name="user_type">User Type :</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="admin_manager">Admin Manager</string>
    <string name="teacher_manager">Teacher Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance">Attendance</string>
    <string name="event">Event</string>
    <string name="homework">Homework</string>
    <string name="student_management">Student Management</string>
    <string name="teacher_management">Teacher Management</string>
    <string name="cost_management">Cost Management</string>
    <string name="bus_management">Bus Management</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="student_info">STUDENT INFO</string>
    <string name="first_name">FIRST NAME</string>
    <string name="middle_name">MIDDLE NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="gender">GENDER</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="email">EMAIL</string>
    <string name="mobile_no">MOBILE NO</string>
    <string name="religion">RELIGION</string>
    <string name="student_cast">STUDENT CAST</string>
    <string name="student_class">STUDENT CLASS</string>
    <string name="student_fees">STUDENT FEES</string>
    <string name="upload_photo">UPLOAD PHOTO</string>
    <string name="parent_info">PARENT INFO</string>
    <string name="father_name">FATHER NAME</string>
    <string name="mother_name">MOTHER NAME</string>
    <string name="occupation">OCCUPATION</string>
    <string name="contact">CONTACT</string>
    <string name="alternate_contact">ALTERNATE CONTACT</string>
    <string name="altenate_contact">ALTENATE CONTACT</string>
    <string name="national">NATIONAL</string>
    <string name="address">ADDRESS</string>
    <string name="state">STATE</string>
    <string name="district">DISTRICT</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="taluka">TALUKA</string>
    <string name="academic_info">ACADEMIC INFO</string>
    <string name="registration_no">REGISTRATION NO</string>
    <string name="roll_no">ROLL NO</string>
    <string name="last_school_name">LAST SCHOOL NAME</string>
    <string name="class1">CLASS</string>
    <string name="last_std">LAST STD</string>
    <string name="medium">MEDIUM</string>
    <string name="sports">SPORTS</string>
    <string name="marks_obtained">MARKS OBTAINED</string>
    <string name="save">Save</string>
    <string name="add_student1">Add Student</string>
    <string name="student_list">STUDENT LIST</string>
    <string name="search">Search</string>
    <string name="students">STUDENTS</string>
    <string name="id">Id</string>
    <string name="name">NAME</string>
    <string name="teacher_comment">Teacher Comment</string>
    <string name="schedule">Schedule</string>
    <string name="syllabus">Syllabus</string>
    <string name="october_03_2018_wednesday">October 03 2018 -Wednesday</string>
    <string name="event_gallery">Event Gallery</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="title_activity_teacher_demo">TeacherDemo</string>
    <string name="myclass">MyClass</string>
    <string name="massage">Massage</string>
    <string name="my_bus">My Bus</string>
    <string name="dummy_name">sachin Tendulkar</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="send">send</string>
    <string name="profile">Profile</string>
    <string name="name1">Name :-</string>
    <string name="date_of_birth1">Date of Birth :-</string>
    <string name="_11_12_1018">11/12/1018</string>
    <string name="standard">Standard :-</string>
    <string name="bus_pick_up">Bus Pick Up</string>
    <string name="bus_pic_up1">Bus Pic Up :-</string>
    <string name="yes">Yes</string>
    <string name="standerd">2 std Secion A</string>
    <string name="driver_name">Driver Name :-</string>
    <string name="event_name">Navratri</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="droped">Droped</string>
    <string name="picked">Picked</string>
    <string name="log_out">Log Out</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="home">Home</string>
    <string name="user_id">User Id</string>
    <string name="about_us">About Us</string>
    <string name="school_name">School Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="address1">B/W No. B 28, Gate No.3, Abhimanshree Society, Behind Volkaswagan Showroom,, University Pashan Road, Pashan, Pune, Maharashtra 411008</string>
    <string name="contactno">9167665654</string>

    <string-array name="std_lists">
        <item>1 std section A</item>
        <item>1 std section B</item>
        <item>1 std section C</item>
        <item>2 std section A</item>
        <item>2 std section B</item>
    </string-array>


    <string-array name="catagery">
        <item>-- Select --</item>
        <item>Parent</item>
        <item>Teacher</item>
        <item>Bus</item>
    </string-array>


</resources>
