<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single"
        android:id="@+id/main">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_stuent_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_student_attendace"
            android:title="@string/attendance" />

      <!--  <item
            android:id="@+id/nav_student_homework"
            android:title="@string/homework" />

        <item
            android:id="@+id/nav_student_event"
            android:title="@string/event" />

        <item
            android:id="@+id/nav_student_bus_pick_up"
            android:title="@string/bus_pick_up"/>
-->
    </group>

    <group android:id="@+id/extra"
        android:checkableBehavior="single">

        <item android:id="@+id/nav_contact_us"
            android:title="@string/contact_us"/>

        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out" />

    </group>

</menu>