<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_student_management"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_teacher_management"
            android:title="@string/log_out" />


        <!--        <item
                    android:id="@+id/nav_bus_management"

                    android:title="@string/bus_management" />


                <item
                    android:id="@+id/nav_cost_management"

                    android:title="@string/cost_management" />
        -->
    </group>


</menu>