<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.student.StudentProfile"
    tools:layout_editor_absoluteY="25dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/consProfile"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@color/colorLightBlue100"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/consDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consProfile">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="56dp"
            android:text="@string/name1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvStudentName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="170dp"
            android:text="@string/dummy_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvName"
            app:layout_constraintStart_toStartOf="@id/tvStudentDOB"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/date_of_birth1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView

            android:id="@+id/tvStudentDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/_11_12_1018"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvDateOfBirth"
            app:layout_constraintTop_toBottomOf="@id/tvStudentName" />

        <TextView

            android:id="@+id/tvSdt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/standard"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tvDateOfBirth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateOfBirth" />

        <TextView
            android:id="@+id/tvStudentStd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/standerd"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvSdt"
            app:layout_constraintStart_toStartOf="@id/tvStudentDOB"
            app:layout_constraintTop_toBottomOf="@id/tvStudentDOB" />

        <TextView
            android:id="@+id/tvBusPicUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bus_pic_up1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tvSdt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSdt" />

        <TextView
            android:id="@+id/tvStudentBusPicUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yes"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tvBusPicUp"
            app:layout_constraintStart_toStartOf="@id/tvStudentStd"
            app:layout_constraintTop_toBottomOf="@+id/tvStudentStd" />

        <TextView
            android:id="@+id/tvDriverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/driver_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBusPicUp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Anil (mh 12 dc 1212)"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvDriverName"
            app:layout_constraintTop_toBottomOf="@+id/tvStudentBusPicUp" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>