<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.student.StudentDashboardFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/cvAttendance"
        app:layout_constraintEnd_toStartOf="@id/cvEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/profile" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cvEvent"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/cvBusPickUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvProfile"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/event" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvAttendance"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorGray300"
        app:layout_constraintBottom_toTopOf="@id/cvStudentHomWork"
        app:layout_constraintEnd_toStartOf="@id/cvBusPickUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/attendance" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvBusPickUp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/cvEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvAttendance"
        app:layout_constraintTop_toBottomOf="@id/cvEvent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/bus_pick_up" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cvStudentHomWork"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAttendance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/homework" />
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>