<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.ContactUs">

    <include
        android:id="@+id/toolbar"
        layout="@layout/top_toolbar"/>


    <ImageView
        android:id="@+id/ivSchoolLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tvLastSchoolName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/school_name"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSchoolLogo" />


    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:src="@drawable/map"
        app:layout_constraintEnd_toStartOf="@id/tvAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLastSchoolName" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/address1"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLocation"
        app:layout_constraintTop_toTopOf="@id/ivLocation" />

    <TextView
        android:onClick="doCall"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:text="@string/contactno"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/ivLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

</android.support.constraint.ConstraintLayout>