<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.admin.StudentManagmentFragment">


    <TextView
        android:id="@+id/tvStudentList"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorGray300"
        android:padding="16dp"
        android:text="@string/student_list"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:text="@string/students"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStudentList" />

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStudents" />


    <ScrollView
        android:id="@+id/scrollViewStudentList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLine"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clListOfStudent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/vLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorGray300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvStudentId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                app:layout_constraintEnd_toStartOf="@id/tvStuentName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vLine1"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="129dp" />

            <TextView
                android:id="@+id/tvStuentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@id/tvStClass"
                app:layout_constraintStart_toEndOf="@id/tvStudentId"
                app:layout_constraintTop_toBottomOf="@+id/vLine1"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="129dp" />

            <TextView
                android:id="@+id/tvStClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CLASS"
                app:layout_constraintEnd_toStartOf="@id/tvMedium"
                app:layout_constraintStart_toEndOf="@id/tvStuentName"
                app:layout_constraintTop_toBottomOf="@+id/vLine1"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="129dp" />

            <TextView
                android:id="@+id/tvMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                app:layout_constraintEnd_toStartOf="@id/tvStContact"
                app:layout_constraintStart_toEndOf="@id/tvStClass"
                app:layout_constraintTop_toBottomOf="@+id/vLine1"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="129dp" />

            <TextView
                android:id="@+id/tvStContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvMedium"
                app:layout_constraintTop_toBottomOf="@+id/vLine1"
                tools:layout_editor_absoluteX="303dp"
                tools:layout_editor_absoluteY="129dp" />

            <View
                android:id="@+id/vLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMedium" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
